--- a/clg.html
+++ b/clg.html
@@ -14,7 +14,7 @@
 			<li><a href="#about">About Us</a></li>
 			<li><a href="#programs">Programs</a></li>
 			<li><a href="#contact">Contact</a></li>
-	li><a href="https://dsce.edu.in/online-learning/">Online Learning</a></li>
+	<li><a href="https://dsce.edu.in/online-learning/">Online Learning</a></li>
 		</ul>
 	</nav>
 	<main>
@@ -33,8 +33,8 @@
 		</section>
 		<section id="contact">
 			<h2>Contact</h2>
-			<p>Address: Shavige Malleswara Hills, Kumaraswamy Layout, Bangalore - 560078, India</p>
-			<p>Phone: +91-80-26661111</p>
+			<p>Address: Kudlu Gate, Hosur Road, Bangalore - 560098, India</p>
+			<p>Phone: +91-80-26661xxx</p>
 			<p>Email: <a href="mailto:info@dsce.edu.in">info@dsce.edu.in</a></p>
 		</section>
 	</main>
